adjustment to ensure lightbox doesn't display on small screens and added README

--- a/styles/_product-descriptions.scss
+++ b/styles/_product-descriptions.scss
@@ -121,7 +121,7 @@
       width: 1.5rem;
       @include utilities.flex(center, center);
       margin: 0.45rem;
-      &:active {
+      &:hover {
         opacity: 70%;
       }
     }
